tests/e2e/semantics/list_index_dot.error
Error: syntax error in story at line 2, column 1

2|    a.b = 0
      ^^^

E0131: `List[int]` can't be dot-accessed with `b` of type `string`
